# meituan-ai-hackathon

./: .dockerignore  .easignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  main.py  meituan-ai-hackathon.code-workspace  package-lock.json  package.json  pyproject.toml  soul.md  start-dev.sh  test.ipynb  xhs_weekly_nail_report.html
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  0002_ops_coupon_grants.py  0003_analytics_events.py  0004_xhs_import_and_single_merchant_shop.py
services/api/app/: __init__.py  dependencies.py  main.py
services/api/app/core/: config.py  db.py  security.py
services/api/app/models/: __init__.py  analytics_event.py  booking.py  direct_message.py  image_processing_artifact.py  job_log.py  merchant_shop.py  merchant_trend.py  mixins.py  nail_style.py  ops_coupon_grant.py  ops_report.py  style_comment.py  style_event_daily.py  trend_nail_campaign.py  trend_snapshot.py  tryon_job.py  user.py  user_block.py  user_browse_history.py  user_favorite.py  user_follow.py  user_hand_photo.py  user_post.py  user_style_like.py  user_style_view.py
services/api/app/providers/: hand_landmarker_provider.py  nail_segmentation_provider.py  openai_image_provider.py  remote_gpu_tryon_provider.py  trend_source_adapter.py  yolo_nail_segmentation_provider.py
services/api/app/routers/: admin.py  ai_recommend.py  auth.py  bookings.py  events.py  favorites.py  helpers.py  jobs.py  market.py  merchant.py  (+8 more)
(+280 files in other folders)
