[project]
name = "meituan-ai-hackthon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "nailtry-ai-api[dev]",
    "opencv-python-headless>=4.13.0.92",
    "ultralytics==8.4.46",
]

[tool.uv.workspace]
members = [
    "services/api",
]

[tool.uv.sources]
nailtry-ai-api = { workspace = true, editable = true }
